change tag look, correct alignement switch theme

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -62,6 +62,7 @@ nav{
 
 .p-container{
     max-width: 650px;
+    font-size: 1.1rem;
 }
 
 .table-container{
@@ -86,4 +87,19 @@ nav{
 
 .contact{
     font-size: 1rem;
+}
+
+.section-title{
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    font-size: 1.75rem;
+}
+
+.tag{
+    font-size: .75rem;
+    font-weight: 700;
+    padding: 2px 7px;
+    border-radius: 3px;
+    color: #007bff;
+    border: 2px solid #007bff;
 }
